<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/nameHint"
        />
    <EditText
        android:id="@+id/phnodEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/phnoHint"
        />
    <EditText
        android:id="@+id/personBranchEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/branchHint"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <Button
            android:id="@+id/insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertBtnTxt"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/delete"
             />
        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteBtnTxt"
            android:layout_alignParentTop="true" />
        <Button
            android:id="@+id/showall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showAllBtnTxt"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/insert"
            />
        <Button
        android:id="@+id/showone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/showOneBtnTxt"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/showall"
             />

    </RelativeLayout>
</LinearLayout>
